welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: not found: type color
def hunt(c:color) {
           ^SlugSnail:30: error: value color is not a member of object java.awt.Color
  			if (getCouleurSol()== Color.color){
                                                    ^